优化并修改样式

--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -4,6 +4,13 @@
     align-items: center;
 }
 
+.TodoItem>input[type="checkbox"]{
+    color: #ff4500;
+    border: 1px solid #ffab66;
+    background-color: white;
+    border-radius: 4px;
+}
+
 .TodoItem>.title{
     flex-grow: 1;
     padding: 0 0.5em;
@@ -12,4 +19,12 @@
 .TodoItem>.completed+.title{
     text-decoration: line-through;
     color: #999;
+}
+
+.TodoItem>button{
+    color: #ff4500;
+    border: 1px solid #ffab66;
+    background-color: white;
+    padding: 1px 4px;
+    border-radius: 4px;
 }
