--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .App>.todoList>li:nth-child(odd){
-  background: #eee;
+  background: rgba(252, 220, 195, 1);
 }
 
 .App>.todoList>li:nth-child(even){
