--- a/src/TodoInput.css
+++ b/src/TodoInput.css
@@ -1,7 +1,14 @@
 .TodoInput{
     width: 100%;
-    line-height: 1.8;
+    line-height: 2;
     margin-bottom: 1em;
     font-size: 16px;
     padding: 0 0.2em;
+    border: 1px solid #ff9999;
+    box-shadow: inset 0 0 2px 0 #ff9999;
+    border-radius: 4px;
+}
+
+.TodoInput:focus{
+    outline-color: #ffcc99;
 }
