--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,22 @@
   box-shadow: 0 0 1em hsla(0,0%,0%,0.15);
 }
 
+
+.App>h1>button{
+  background: #fff;
+  border: 1px solid #ff9999;
+  padding: 3px 5px;
+  border-radius: 3px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.App>h1>button:hover{
+  box-shadow: 0 0 2px 1px #ffcccc;
+  color: #ff6666;
+  /*background: #ffeeee;*/
+}
+
 .App>.todoList>li:nth-child(odd){
   /*background: rgba(252, 220, 195, 1);*/
   background: #ffdddd;
