--- a/src/UserDialog.css
+++ b/src/UserDialog.css
@@ -27,25 +27,66 @@
 
 .UserDialog>nav:first-child label{
     cursor: pointer;
+    background: #fff;
+    padding: 6px 15px;
+    border-radius: 3px;
+    margin-left: 10px;
+}
+
+.UserDialog>nav:first-child>input[type="radio"]{
+    visibility: hidden;
 }
 
 .UserDialog>nav:first-child>input[type="radio"]:not(:first-child){
-    margin-left: 2em;
+    margin-left: 20px;
+}
+
+.UserDialog>nav:first-child>input[type="radio"].checked+label{
+    background-color: #ff5555;
+    color: #fff;
 }
 
 .UserDialog>.panes{
     padding: 0 1em 1em;
 }
 
-.UserDialog form>row{
+.UserDialog form>.row{
     display: flex;
     padding: 0.3em 0;
 }
 
 .UserDialog form>.row>label:first-child{
+    display: inline-block;
     width: 4em;
+    /*border: 1px solid red;*/
 }
 
-.UserDialog form>row.action{
+.UserDialog form>.row>input[type="text"],
+.UserDialog form>.row>input[type="password"]{
+    line-height: 1.2;
+    border: 1px solid #ff9999;
+    box-shadow: inset 0 0 2px 0 #ffaaaa;
+    border-radius: 2px;
+}
+
+.UserDialog form>.row>input[type="text"]:focus,
+.UserDialog form>.row>input[type="password"]:focus{
+    outline-color: #ffcc99;
+}
+
+.UserDialog form>.action{
     padding-left: 4em;
+}
+
+.UserDialog form>.action>button{
+    cursor: pointer;
+    background: #dadada;
+    border: none;
+    padding: 3px 5px;
+    border-radius: 3px;
+}
+
+.UserDialog form>.action>button:hover{
+    background-color: #ff5555;
+    color: #fff;
 }
