修复勾选框标签下面出现蓝线的问题

--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -8,6 +8,10 @@
     display: none;
 }
 
+.TodoItem>input[type="checkbox"]+label{
+    text-decoration: none;
+}
+
 .TodoItem>.title{
     flex-grow: 1;
     padding: 0 0.5em;
