--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
 body {
-  background: #ddd;
+  background-image: url('./images/bg-app.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  background-color: #fff;
 }
+
+@media (max-aspect-ratio: 1280/854){
+    body{
+      background-size: auto 100vh;
+    }
+}
+
 
 #root{
   display: flex;
