--- a/src/UserDialog.css
+++ b/src/UserDialog.css
@@ -5,7 +5,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-image: url('./images/bg-sign.jpg');
+    background-image: url('./../public/images/bg-sign.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
