--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('./images/bg-app.jpg');
+  background-image: url('./../public/images/bg-app.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
