--- a/src/UserDialog.css
+++ b/src/UserDialog.css
@@ -32,11 +32,11 @@
     box-shadow: 0 0 1em hsla(0, 0%, 0%, 0.35)
 }
 
-.UserDialog>nav:first-child{
+.UserDialog nav:first-child{
     padding: 1em;
 }
 
-.UserDialog>nav:first-child label{
+.UserDialog nav:first-child label{
     cursor: pointer;
     background: #fff;
     padding: 6px 15px;
@@ -44,20 +44,20 @@
     margin-left: 10px;
 }
 
-.UserDialog>nav:first-child>input[type="radio"]{
+.UserDialog nav:first-child>input[type="radio"]{
     visibility: hidden;
 }
 
-.UserDialog>nav:first-child>input[type="radio"]:not(:first-child){
+.UserDialog nav:first-child>input[type="radio"]:not(:first-child){
     margin-left: 20px;
 }
 
-.UserDialog>nav:first-child>input[type="radio"].checked+label{
+.UserDialog nav:first-child>input[type="radio"].checked+label{
     background-color: #ff5555;
     color: #fff;
 }
 
-.UserDialog>.panes{
+.UserDialog .panes{
     padding: 0 1em 1em;
 }
 
