--- a/src/UserDialog.css
+++ b/src/UserDialog.css
@@ -56,6 +56,7 @@
     width: 75%;
     margin: 0 auto;
     line-height: 2em;
+    padding: 3px 0;
     border: 1px solid #ff9999;
     box-shadow: inset 0 0 2px 0 #ffaaaa;
     border-radius: 2px;
@@ -79,7 +80,7 @@
     background-color: #ff5555;
     color: #fff;
     border: none;
-    padding: 3px 5px;
+    padding: 4px 0;
     border-radius: 3px;
     display: block;
     width: 75%;
