--- a/src/signInOrSignUp.css
+++ b/src/signInOrSignUp.css
@@ -24,7 +24,7 @@
     top: 100%;
     width: 0;
     height: 2px;
-    background: #ff5555;
+    background: #db4c3f;
 }
 
 .signInOrSignUp nav label>.underline-left{
@@ -45,8 +45,8 @@
 }
 
 .signInOrSignUp nav>input[type="radio"].checked+label{
-    color: #ff5555;
-    border-bottom-color: #ff5555;
+    color: #db4c3f;
+    border-bottom-color: #db4c3f;
 }
 
 .signInOrSignUp nav>input[type="radio"].checked+label>span{
