--- a/src/TodoInput.css
+++ b/src/TodoInput.css
@@ -1,41 +1,46 @@
 .TodoInput{
+    flex-shrink: 0;
+    flex-grow: 0;
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .TodoInput>.InputBar{
-    line-height: 2;
-    margin-bottom: 1em;
-    font-size: 16px;
-    padding: 0 0.2em;
-    border: 1px solid #ff9999;
-    box-shadow: inset 0 0 2px 0 #ff9999;
-    border-radius: 4px;
-    flex-grow: 1;
     display: block;
+    font-size: 16px;
+    border: none;
+    padding: 0 0.5em;
+    height: 49px;
+    flex-grow: 1;
+    border: none;
+    background-color: transparent;
 }
 
 .TodoInput>.InputBar:focus{
-    outline-color: #ffcc99;
+    outline:none;
 }
 
 .TodoInput>button{
-    margin-left: 10px;
-    background: #ff9999;
-    color: #fff;
-    line-height: 2;
-    margin-bottom: 1em;
-    font-size: 16px;
-    padding: 0 0.5em;
-    border: 1px solid #ff9999;
-    box-shadow: inset 0 0 2px 0 #ff9999;
-    border-radius: 4px;
     display: block;
     cursor: pointer;
+    font-size: 18px;
+    padding: 0.5em 0.5em;
+    border: none;
+    background-color: transparent;
+    color: #888;
 }
 
 .TodoInput>button:hover{
-    box-shadow: 0 0 2px 1px #ffcccc;
-    border: 1px solid #ffaaaa;
-    background-color: #ffaaaa;
+    opacity: 0.7;
 }
+
+.aside>.TodoInput{
+    background-color: rgba(164, 178, 135, 0.46);
+}
+
+.main>.inputWrapper>.TodoInput{
+    background-color: #789575;
+}
+
