--- a/src/TodoInput.css
+++ b/src/TodoInput.css
@@ -36,11 +36,11 @@
     opacity: 0.7;
 }
 
-.aside>.TodoInput{
+.aside-opened>.TodoInput{
     background-color: rgba(164, 178, 135, 0.46);
 }
 
-.aside>.TodoInput>input[type="text"]{
+.aside-opened>.TodoInput>input[type="text"]{
     color: #222;
 }
 
