--- a/src/TodoGroup.css
+++ b/src/TodoGroup.css
@@ -11,6 +11,16 @@
     margin: 0;
     padding:10px;
     cursor: pointer;
+    position: relative;
+}
+
+.TodoGroup>li>.delete-group{
+    position: absolute;
+    right: 25px;
+    top: 10px;
+    padding: 1px 2px;
+    font-size: 14px;
+    visibility: hidden;
 }
 
 .TodoGroup>li>i{
@@ -23,6 +33,7 @@
     background: #e0eefa;
 }
 
-.TodoGroup>li.active>i{
+.TodoGroup>li.active>i,.TodoGroup>li.active>.delete-group{
     color: #2b8dec;
+    visibility: visible;
 }
